--- a/UIUXDesign/UIDesign.html
+++ b/UIUXDesign/UIDesign.html
@@ -11,6 +11,12 @@
 			<img src="images/UIDesign_01.jpg" width="1920" height="4005" alt=""></td>
 	</tr>
 	<tr>
+		<td style="width: 1920px; height: 1200px; background-color: #faf9fc;">
+			<video src="video/ezgif.com-crop (1).mp4" autoplay controls  style="display: block; margin:0 auto !important;"></video>
+
+		</td>
+	</tr>
+	<tr>
 		<td>
 			<img src="images/UIDesign_02.jpg" width="1920" height="1286" alt=""></td>
 	</tr>
@@ -50,6 +56,7 @@
 		<td>
 			<img src="images/UIDesign_11.jpg" width="1920" height="3721" alt=""></td>
 	</tr>
+
 </table>
 <!-- End Save for Web Slices -->
 </body>
