--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+        img{
+            max-width: 100%;
+        }
+
+    </style>
 </head>
 <body>
-    
+    <img src="LandingPage.png" alt="">
 </body>
 </html>
